--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,35 @@ body {
 .error_text {
   @apply text-red-500 text-xs
 }
+
+/* Sliders */
+/* Track */
+.slider::-webkit-slider-runnable-track {
+  height: 0.5rem;
+  border-radius: 9999px;
+  @apply bg-gray-100
+}
+
+.slider::-moz-range-track {
+  height: 0.5rem;
+  border-radius: 9999px;
+    @apply bg-gray-100
+}
+
+/* Thumb */
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 9999px;
+  background-color: var(--slider-color);
+  margin-top: -0.25rem;
+}
+
+.slider::-moz-range-thumb {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 9999px;
+  background-color: var(--slider-color);
+  border: none;
+}
